k8s/dashboard-microfront/dashboard-microfront-deployment-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: modulefederation-microfront-dashboard-deployment-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: modulefederation-microfront-dashboard-dev
  template:
    metadata:
      labels:
        app: modulefederation-microfront-dashboard-dev
    spec:
      containers:
      - name: modulefederation-microfront-dashboard-deployment-dev
        image: ghcr.io/vucem30/dockerized-modulefederation-dashboard-microfront:1.0.32
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
      imagePullSecrets:
      - name: vucem30registrykey
