k8s/dashboard-microfront/dashboard-microfront-service-dev.yaml
# Expose the deployment using a Service
apiVersion: v1
kind: Service
metadata:
  name: modulefederation-dashboard-microfront-service-dev
spec:
  selector:
    app: modulefederation-dashboard-microfront-dev
  ports:
    - protocol: TCP
      port: 4200
      targetPort: 80
  type: NodePort
